Fixing the example env file.

--- a/env.example
+++ b/env.example
@@ -10,7 +10,7 @@ OPENWEBUI_PORT=3000
 # ---- Model & vLLM ----
 MODEL_NAME=mistralai/Mistral-7B-Instruct-v0.2
 # Recommended on T4/V100 and for mistral tokenizer
-VLLM_EXTRA_ARGS=--dtype float16 --max-model-len 8192
+VLLM_EXTRA_ARGS="--dtype float16 --max-model-len 8192"
 # If model is gated on HF:
 # HF_TOKEN=hf_xxx
 
