--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,8 @@ services:
       --host 0.0.0.0
       --port 8000
       ${VLLM_EXTRA_ARGS}
-    # ports:
-    #   - "${VLLM_PORT}:8000"
+    ports:
+      - "${VLLM_PORT}:8000"
     networks: [ragnet]
     healthcheck:
       test: ["CMD-SHELL", "curl -sSf http://localhost:8000/v1/models >/dev/null || exit 1"]
@@ -66,8 +66,8 @@ services:
       --port 8080
       --collection activate_rag
       --embedding_model ${EMBEDDING_MODEL}
-    # ports:
-    #   - "${RAG_PORT}:8080"
+    ports:
+      - "${RAG_PORT}:8080"
     networks: [ragnet]
     depends_on:
       chroma:
@@ -91,6 +91,7 @@ services:
     volumes:
       - ./docs:/docs:rw${SELINUX_SUFFIX:-}
       - ./cache:/cache:rw${SELINUX_SUFFIX:-}
+      - ./indexer.py:/app/indexer.py
     command: >
       python3 /app/indexer.py --config /app/indexer_config.yaml --poll --rescan-seconds 10
     networks: [ragnet]
@@ -117,6 +118,7 @@ services:
       HF_HOME: /root/.cache/huggingface
     volumes:
       - ./cache:/root/.cache:rw${SELINUX_SUFFIX:-}
+      - ./rag_proxy.py:/app/rag_proxy.py
     command: >
       python3 /app/rag_proxy.py
     ports:
