--- a/env.example
+++ b/env.example
@@ -8,7 +8,7 @@ RUN_OPENWEBUI=0
 OPENWEBUI_PORT=3000
 
 # ---- Model & vLLM ----
-MODEL_NAME=mistralai/Mistral-7B-Instruct-v0.2
+MODEL_NAME=meta-llama/Llama-3.1-8B-Instruct
 # Recommended on T4/V100 and for mistral tokenizer
 VLLM_EXTRA_ARGS="--dtype float16 --max-model-len 8192"
 # If model is gated on HF:
