--- a/docker/env.example
+++ b/docker/env.example
@@ -1,18 +1,22 @@
 # ---- General ports ----
-VLLM_PORT=8000
+VLLM_SERVER_PORT=8000
 RAG_PORT=8080
 PROXY_PORT=8081
-CHROMA_HTTP_PORT=8001
+CHROMA_PORT=8001
+CHROMA_HOST=127.0.0.1
 
 RUN_OPENWEBUI=0
 OPENWEBUI_PORT=3000
 
+RAG_URL="http://127.0.0.1:$RAG_PORT"
+VLLM_URL="http://vllm:$VLLM_SERVER_PORT/v1"
+
 # ---- Model & vLLM ----
 MODEL_NAME=meta-llama/Llama-3.1-8B-Instruct
 # Recommended on T4/V100 and for mistral tokenizer
-VLLM_EXTRA_ARGS="--dtype float16 --max-model-len 8192"
+VLLM_EXTRA_ARGS="--dtype float16 --max-model-len 8192  --enforce-eager"
 # If model is gated on HF:
-# HF_TOKEN=hf_xxx
+# HF_TOKEN=hf_xx
 
 # ---- RAG settings ----
 MAX_CONTEXT=8192
@@ -27,6 +31,3 @@ CHROMA_AUTO_RESET=0
 STREAM_BRIDGE=1
 DEBUG_SSE=0
 IGNORE_CLIENT_STOP=1
-
-# SELinux: set to :Z on RHEL/Fedora hosts
-SELINUX_SUFFIX=
