vLLM tunings for stability.

--- a/singularity/env.sh.example
+++ b/singularity/env.sh.example
@@ -20,7 +20,9 @@ export HF_TOKEN="hf_xxx"
 export HF_HOME="/root/.cache/huggingface"
 
 # Recommended on T4/V100 and for mistral tokenizer
-export VLLM_EXTRA_ARGS="--dtype float16 --max-model-len $MAX_CONTEXT --enforce-eager"
+export DOCS_DIR=./docs
+export VLLM_ATTENTION_BACKEND=TRITON_ATTN_VLLM_V1
+export VLLM_EXTRA_ARGS="--dtype float16 --max-model-len $MAX_CONTEXT --gpu-memory-utilization=0.85"
 
 # Other VLLM tuning settings
 export VLLM_LOGGING_LEVEL=INFO
