--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       VLLM_SERVER_PORT: ${VLLM_SERVER_PORT}
       HF_TOKEN: ${HF_TOKEN}
       HF_HOME: /root/.cache/huggingface
+      VLLM_ATTENTION_BACKEND: TRITON_ATTN_VLLM_V1
     volumes:
       - ./cache:/root/.cache
     command: >
