--- a/workflow.yaml
+++ b/workflow.yaml
@@ -8,7 +8,7 @@ jobs:
   execute_job:
     ssh:
       remoteHost: ${{ inputs.resource.ip }}
-      remoteUser: mattshax
+      remoteUser: ${{ inputs.resource.namespace }}
     steps:
       - name: Preparing Run Directory
         run: |
