Use default rundir

--- a/workflow.yaml
+++ b/workflow.yaml
@@ -11,12 +11,7 @@ jobs:
       remoteUser: ${{ inputs.resource.namespace }}
     steps:
       - name: Preparing Run Directory
-        run: |
-          rundir=${{ inputs.parent_rundir }}/$(date +"%Y/%m/%d/%H-%M-%S")
-          echo "rundir=${rundir}" | tee -a $OUTPUTS
-          mkdir -p ${rundir}
-          cd ${rundir} 
-          git clone https://github.com/parallelworks/activate-rag-vllm-compose.git .
+        run: git clone https://github.com/parallelworks/activate-rag-vllm-compose.git .
       - name: Execute Process
         env:
           RUNMODE: ${{ inputs.runmode  }}
@@ -27,7 +22,6 @@ jobs:
           MODEL_NAME: ${{ inputs.hfmodel  }}
           DOCS_DIR: ${{ inputs.docsdir }}
         run: |
-          cd ${{ needs.execute_job.outputs.rundir }}
           echo "export RUNMODE=${RUNMODE}" > run.env
           echo "export BUILD=${BUILD}" >> run.env
           echo "export RUNTYPE=${RUNTYPE}" >> run.env
@@ -46,10 +40,6 @@ jobs:
         autoselect: true
         include-workspace: false
         tooltip: Resource to run the service
-      parent_rundir:
-        label: Run Directory
-        type: string
-        default: ~/activate-rag-vllm
       runmode:
         label: Execution Mode
         type: dropdown
