--- a/workflow.yaml
+++ b/workflow.yaml
@@ -51,7 +51,7 @@ jobs:
             echo "Waiting for target hostname..."
 
             # Check if the service.port file exists and read its contents
-            target_hostname=$(cat target.hostname)
+            target_hostname=$(cat target.hostname  2>/dev/null)
 
             # Exit the loop if file was found and read
             if [ -n "${target_hostname}" ]; then
