--- a/workflow.yaml
+++ b/workflow.yaml
@@ -66,7 +66,7 @@ jobs:
         cleanup: |
           set -x
           cd activate-rag-vllm-compose
-          jobid=${{echo ${{ needs.slurm_job.outputs.jobid }}}}
+          jobid=${{ needs.slurm_job.outputs.jobid }}}}
           target_hostname=$(squeue -j "${job_id}" --noheader --format="%N")
           ssh ${target_hostname} bash cancel.sh
           scancel ${jobid}
