--- a/workflow.yaml
+++ b/workflow.yaml
@@ -154,7 +154,7 @@ jobs:
           cd activate-rag-vllm-compose
           if [[ ${{ inputs.execmethod }} == "SLURM" ]]; then
             #jobid=${{ needs.slurm_job.outputs.jobid }}
-            jobid=$(cat jobid)
+            source jobid
             target_hostname=$(squeue -j "${jobid}" --noheader --format="%N")
             echo "target_hostname=${target_hostname}" | tee -a $OUTPUTS
           elif [[ ${{ inputs.execmethod }} == "SSH" ]]; then
