--- a/workflow.yaml
+++ b/workflow.yaml
@@ -97,6 +97,7 @@ jobs:
             if [ -z "${job_status}" ]; then
               job_status=$(sacct -j ${jobid}  --format=state | tail -n1)
               echo "$(date) Job exited with status ${job_status}"
+              touch job.ended
               exit 0
             fi
           done
@@ -127,6 +128,7 @@ jobs:
         run: |
           cd activate-rag-vllm-compose
           bash ./run.sh
+          touch job.ended
         cleanup: |
           set -x
           cd activate-rag-vllm-compose
@@ -180,6 +182,9 @@ jobs:
               
               if check_server; then
                   echo "Success: Server is listening on ${remote_host}:${remote_port}!"
+                  exit 0
+              elif [ -f job.ended ]; then
+                  echo "$(date) Job was completed. Exiting... "
                   exit 0
               else
                   echo "Server not responding. Retrying in ${RETRY_INTERVAL} seconds..."
