--- a/workflow.yaml
+++ b/workflow.yaml
@@ -200,7 +200,7 @@ jobs:
           remotePort: '8081'
           target: '${{ inputs.resource.id }}'
           name: '${{ sessions.session }}'
-          remoteHost: '${{ inputs.resources.ip }}'
+          remoteHost: '${{ inputs.resource.ip }}'
 
 
 'on':
