Refactoring to pull from existing docker container.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.rag
-    image: activate/rag-proxy-plus:latest
+    image: parallelworks/activate-rag-vllm:latest
     container_name: rag
     environment:
       RAG_URL: ${RAG_URL}
