--- a/workflow.yaml
+++ b/workflow.yaml
@@ -241,7 +241,7 @@ jobs:
       build:
         label: Build Containers
         type: boolean
-        default: true
+        default: false
       hfmodel:
         label: HF Model
         default: meta-llama/Llama-3.1-8B-Instruct
