Required for testing

--- a/workflow.yaml
+++ b/workflow.yaml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - name: Preparing Run Directory
         run: |
-          git clone https://github.com/parallelworks/activate-rag-vllm.git
+          git clone -b alvaro/singularity https://github.com/parallelworks/activate-rag-vllm.git
           cd activate-rag-vllm
           git pull
       - name: Create Environment File
