--- a/workflow.yaml
+++ b/workflow.yaml
@@ -155,7 +155,7 @@ jobs:
         early-cancel: any-job-failed
         run: |
           set -x
-          cd activate-rag-vllm-compose
+          cd activate-rag-vllm
           if [[ ${{ inputs.execmethod }} == "SLURM" ]]; then
             #jobid=${{ needs.slurm_job.outputs.jobid }}
             source jobid
@@ -178,19 +178,21 @@ jobs:
               return $?
           }
 
+          cd activate-rag-vllm
+
           # Main loop
           attempt=1
           while true; do
-              echo "Attempt $attempt: Checking if server is listening on ${remote_host}:${remote_port}..."
+              echo "$(date) Attempt $attempt: Checking if server is listening on ${remote_host}:${remote_port}..."
               
               if check_server; then
-                  echo "Success: Server is listening on ${remote_host}:${remote_port}!"
+                  echo "$(date) Success: Server is listening on ${remote_host}:${remote_port}!"
                   exit 0
               elif [ -f job.ended ]; then
                   echo "$(date) Job was completed. Exiting... "
                   exit 0
               else
-                  echo "Server not responding. Retrying in ${RETRY_INTERVAL} seconds..."
+                  echo "$(date) Server not responding. Retrying in ${RETRY_INTERVAL} seconds..."
                   sleep "$RETRY_INTERVAL"
                   ((attempt++))
               fi
