--- a/workflow.yaml
+++ b/workflow.yaml
@@ -12,14 +12,14 @@ jobs:
     steps:
       - name: Preparing Run Directory
         run: |
-          git clone https://github.com/parallelworks/activate-rag-vllm.git
-          cd activate-rag-vllm
+          git clone https://github.com/parallelworks/activate-rag-vllm.git ${{ inputs.rundir }}
+          cd ${{ inputs.rundir }}
           git pull
       - name: Create Environment File
         early-cancel: any-job-failed
         run: |
           set -x
-          cd activate-rag-vllm
+          cd ${{ inputs.rundir }}
           echo "export RUNMODE=${{ inputs.runmode  }}" > .run.env
           echo "export BUILD=${{ inputs.build  }}" >> .run.env
           echo "export RUNTYPE=${{ inputs.runtype  }}" >> .run.env
@@ -38,7 +38,7 @@ jobs:
       - name: Create SLURM Script
         early-cancel: any-job-failed
         run: |
-          cd activate-rag-vllm
+          cd ${{ inputs.rundir }}
           echo '#!/bin/bash' > run.sh
           chmod +x run.sh
           if [[ "${{ inputs.slurm.partition }}" != "undefined" ]]; then
@@ -57,7 +57,7 @@ jobs:
           cat start_service.sh >> run.sh
       - name: Submit SLURM Script
         run: |
-          cd activate-rag-vllm
+          cd ${{ inputs.rundir }}
           echo "$(date) Submitting SLURM Job"
           jobid=$(sbatch run.sh | tail -1 | awk -F ' ' '{print $4}')
           if [ -z "${jobid}" ]; then
@@ -67,7 +67,7 @@ jobs:
           echo "jobid=${jobid}"  | tee -a $OUTPUTS | tee -a jobid
         cleanup: |
           set -x
-          cd activate-rag-vllm
+          cd ${{ inputs.rundir }}
           jobid=${{ needs.slurm_job.outputs.jobid }}}}
           target_hostname=$(squeue -j "${jobid}" --noheader --format="%N")
           ssh ${target_hostname} bash cancel.sh
@@ -77,7 +77,7 @@ jobs:
           jobid=${{ needs.slurm_job.outputs.jobid }}
           echo "$(date) Monitoring SLURM job ${jobid}"
 
-          cd activate-rag-vllm
+          cd ${{ inputs.rundir }}
           touch run.out
           tail -f run.out &
           echo &! > tail.pid
@@ -106,7 +106,7 @@ jobs:
           done
         cleanup: |
           set -x
-          cd activate-rag-vllm
+          cd ${{ inputs.rundir }}
           kill $(cat tail.pid)
 
   ssh_job:
@@ -119,7 +119,7 @@ jobs:
       - name: Create SSH Script
         early-cancel: any-job-failed
         run: |
-          cd activate-rag-vllm
+          cd ${{ inputs.rundir }}
           echo '#!/bin/bash' > run.sh
           chmod +x run.sh
 
@@ -129,12 +129,12 @@ jobs:
           cat start_service.sh >> run.sh
       - name: Submit SSH Script
         run: |
-          cd activate-rag-vllm
+          cd ${{ inputs.rundir }}
           bash ./run.sh
           touch job.ended
         cleanup: |
           set -x
-          cd activate-rag-vllm
+          cd ${{ inputs.rundir }}
           bash cancel.sh
 
   create_session:
@@ -146,7 +146,7 @@ jobs:
       - name: Wait for job to start
         early-cancel: any-job-failed
         run: |
-          cd activate-rag-vllm
+          cd ${{ inputs.rundir }}
           while [ ! -f job.started ]; do
             echo "Waiting for job to start..."
             sleep 5
@@ -155,7 +155,7 @@ jobs:
         early-cancel: any-job-failed
         run: |
           set -x
-          cd activate-rag-vllm
+          cd ${{ inputs.rundir }}
           if [[ ${{ inputs.execmethod }} == "SLURM" ]]; then
             #jobid=${{ needs.slurm_job.outputs.jobid }}
             source jobid
@@ -178,7 +178,7 @@ jobs:
               return $?
           }
 
-          cd activate-rag-vllm
+          cd ${{ inputs.rundir }}
 
           # Main loop
           attempt=1
@@ -232,6 +232,10 @@ jobs:
             label: Docker
           - value: singularity
             label: Singularity
+      rundir:
+        label: Run Directory
+        default: ~/activate-rag-vllm
+        type: string
       runtype:
         label: Run Type
         type: dropdown
