--- a/workflow.yaml
+++ b/workflow.yaml
@@ -152,7 +152,7 @@ jobs:
             echo "Waiting for job to start..."
             sleep 5
           done
-      - name: Wait for Server To Start
+      - name: Get Hostname
         early-cancel: any-job-failed
         run: |
           set -x
@@ -163,14 +163,21 @@ jobs:
             target_hostname=$(squeue -j "${jobid}" --noheader --format="%N")
             echo "target_hostname=${target_hostname}" | tee -a $OUTPUTS
           elif [[ ${{ inputs.execmethod }} == "SSH" ]]; then
-            target_hostname="127.0.0.1"
-            echo "target_hostname=${target_hostname}" | tee -a $OUTPUTS
+            echo "target_hostname=$(hostname)" | tee -a $OUTPUTS
           fi
-
+      - name: Get Proxy Port
+        early-cancel: any-job-failed
+        run: |
+          set -x
+          cd ${{ inputs.rundir }}
+          cat PROXY_PORT | tee -a $OUTPUTS
+      - name: Wait for Server To Start
+        early-cancel: any-job-failed
+        run: |
           TIMEOUT=5
           RETRY_INTERVAL=3
-          remote_host="$target_hostname"
-          remote_port="8081"
+          remote_host="${{ needs.create_session.outputs.target_hostname }}"
+          remote_port="${{ needs.create_session.outputs.PROXY_PORT }}"
 
           # Function to check if server is listening
           check_server() {
@@ -178,19 +185,21 @@ jobs:
               return $?
           }
 
+          cd ${{ inputs.rundir }}
+
           # Main loop
           attempt=1
           while true; do
-              echo "Attempt $attempt: Checking if server is listening on ${remote_host}:${remote_port}..."
+              echo "$(date) Attempt $attempt: Checking if server is listening on ${remote_host}:${remote_port}..."
               
               if check_server; then
-                  echo "Success: Server is listening on ${remote_host}:${remote_port}!"
+                  echo "$(date) Success: Server is listening on ${remote_host}:${remote_port}!"
                   exit 0
               elif [ -f job.ended ]; then
                   echo "$(date) Job was completed. Exiting... "
                   exit 0
               else
-                  echo "Server not responding. Retrying in ${RETRY_INTERVAL} seconds..."
+                  echo "$(date) Server not responding. Retrying in ${RETRY_INTERVAL} seconds..."
                   sleep "$RETRY_INTERVAL"
                   ((attempt++))
               fi
@@ -198,10 +207,10 @@ jobs:
       - name: Update Session
         uses: parallelworks/update-session
         with:
-          remotePort: '8081'
+          remotePort: '${{ needs.create_session.outputs.PROXY_PORT }}'
           target: '${{ inputs.resource.id }}'
           name: '${{ sessions.session }}'
-          remoteHost: '127.0.0.1'
+          remoteHost: '${{ needs.create_session.outputs.target_hostname }}'
 
 
 'on':
