--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -22,10 +22,10 @@ services:
       --port 8000
       ${VLLM_EXTRA_ARGS}
     ports:
-      - "${VLLM_SERVER_PORT}:8000"
+      - "${VLLM_SERVER_PORT}:${VLLM_SERVER_PORT}"
     networks: [ragnet]
     healthcheck:
-      test: ["CMD-SHELL", "curl -sSf http://localhost:8000/v1/models >/dev/null || exit 1"]
+      test: ["CMD-SHELL", "curl -sSf http://localhost:${VLLM_SERVER_PORT}/v1/models >/dev/null || exit 1"]
       interval: 15s
       timeout: 5s
       retries: 100
