--- a/workflow.yaml
+++ b/workflow.yaml
@@ -147,6 +147,7 @@ jobs:
       - name: Wait for job to start
         early-cancel: any-job-failed
         run: |
+          set -x
           while [ ! -f ${{ inputs.rundir }}/job.started ]; do
             echo "Waiting for job to start..."
             sleep 5
